Adding responsiveness for landing page

--- a/index.html
+++ b/index.html
@@ -7,199 +7,210 @@
     <link rel="stylesheet" href="CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
-  <section class="hero">
-    <div class="container">
-      <header class="header">
-        <div class="header__title">Relationz</div>
-        <div class="header__login"><a href="">Login</a></div>
-        <nav class="header__nav">
-          <ul>
-            <li class="header__nav-item"><a href="">Services</a></li>
-            <li class="header__nav-item"><a href="">Enterprise</a></li>
-            <li class="header__nav-item"><a href="">Pricing</a></li>
-          </ul>
-        </nav>
-        <button class="header__button">Try it for free</button>
-      </header>
-    </div>
-    <div class="container">
-      <div class="hero__inner">
-        <div class="hero__description">
-          <h1 class="hero__title">Take your relationships to the next level</h1>
-          <p class="paragraph">
-            The multichannel sales engagement platform which automates personal
-            email outreach, calls, and tasks, while Sales can focus on what
-            really matters - closing deals.
-          </p>
-          <div class="hero__email-id">
-            <label for="email" class="hero__label">Email id</label>
-            <button class="hero__button">Try it for free</button>
-          </div>
-        </div>
-        <div class="hero__image">
-          <img src="images/phone.png" alt="" class="hero__phone" />
-        </div>
+  <body>
+    <section class="hero">
+      <div class="container">
+        <header class="header">
+          <div class="header__title">Relationz</div>
+          <div class="header__login"><a href="">Login</a></div>
+          <nav class="header__nav">
+            <ul>
+              <li class="header__nav-item"><a href="">Services</a></li>
+              <li class="header__nav-item"><a href="">Enterprise</a></li>
+              <li class="header__nav-item"><a href="">Pricing</a></li>
+            </ul>
+          </nav>
+          <button class="header__button">Try it for free</button>
+        </header>
       </div>
-    </div>
-  </section>
-  <section class="info-section">
-    <div class="container">
-      <article class="reminder">
-        <ul class="reminder__notifications">
-          <li class="reminder__notification-example">
-            <img src="images/notification-1.png" alt="" />
-            <p class="example-text">
-              You have a meeting with Surbhi to help her with her portfolio. She
-              got a new pet (Dog named Tiger).
+      <div class="container">
+        <div class="hero__inner">
+          <div class="hero__description">
+            <h1 class="hero__title">
+              Take your relationships to the next level
+            </h1>
+            <p class="paragraph">
+              The multichannel sales engagement platform which automates
+              personal email outreach, calls, and tasks, while Sales can focus
+              on what really matters - closing deals.
             </p>
-          </li>
-          <li class="reminder__notification-example">
-            <img src="images/notification-2.png" alt="" />
-            <p class="example-text">
-              Ripal has recently been to Thailand and she wants to discuss about
-              new Job opportunity.
-            </p>
-          </li>
-          <li class="reminder__notification-example">
-            <img src="images/notification-3.png" alt="" />
-            <p class="example-text">
-              Prashasti hasn’t responded to your Email from 22 Jan, 2020.<br />
-              Want to check up on her? <span>Follow up</span>
-            </p>
-          </li>
-        </ul>
-        <div class="about-reminder">
-          <h2 class="reminder__title">Get reminders to follow up</h2>
-          <p class="paragraph">
-            We remind you of everything important and track everything that’s
-            important to your important ones so you always stay connected. We
-            only tell you the details when you need them the most.
-          </p>
-          <ul class="check-marks">
-            <li class="check-mark">
-              <img src="images/check-mark.svg" alt="" />
-              <p class="example-text">Birthdays</p>
-            </li>
-            <li class="check-mark">
-              <img src="images/check-mark.svg" alt="" />
-              <p class="example-text">Friends & Family</p>
-            </li>
-            <li class="check-mark">
-              <img src="images/check-mark.svg" alt="" />
-              <p class="example-text">Business Meetings</p>
-            </li>
-            <li class="check-mark">
-              <img src="images/check-mark.svg" alt="" />
-              <p class="example-text">Surroundings</p>
-            </li>
-          </ul>
-        </div>
-      </article>
-      <div class="vector" id="arrows-image">
-        <img src="images/arrows.svg" alt="" />
-      </div>
-      <article class="sync">
-        <div class="about-sync">
-          <h2 class="sync__title">Our sync remembers everything</h2>
-          <p class="paragraph">
-            We build a huge databasse of all your contacts with all the possible
-            details they share with you and you can access it anywhere, anytime.
-            It’s works so well that you will love it like we do.
-          </p>
-          <ul class="check-marks">
-            <li class="check-mark">
-              <img src="./images/check-mark.svg" alt="" />
-              <p class="example-text">Available on devices</p>
-            </li>
-            <li class="check-mark">
-              <img src="./images/check-mark.svg" alt="" />
-              <p class="example-text">Seatch details</p>
-            </li>
-            <li class="check-mark">
-              <img src="./images/check-mark.svg" alt="" />
-              <p class="example-text">Can be accesed via phonebook</p>
-            </li>
-            <li class="check-mark">
-              <img src="./images/check-mark.svg" alt="" />
-              <p class="example-text">24X7 Support</p>
-            </li>
-          </ul>
-        </div>
-        <div class="sync__data-example">
-          <div class="sync__example-image">
-            <img src="./images/sync__example-img.svg" alt="" />
-            <div class="sync__general-info">
-              <h3 class="sync__example-name">Archana Deshmukh</h3>
-              <p class="example-text">Product Design Consultant</p>
+            <div class="hero__email-id">
+              <label for="email" class="hero__label">Email id</label>
+              <button class="hero__button">Try it for free</button>
             </div>
           </div>
-          <ul class="sync__data-list">
-            <li>
-              <img src="images/birthday.svg" alt="birthday" />
-              <p class="example-text">17 April, 1994</p>
-            </li>
-            <li>
-              <img src="images/work.svg" alt="work" />
-              <p class="example-text">Product Design Consultant</p>
-            </li>
-            <li>
-              <img src="images/activity.svg" alt="activity" />
+          <img src="images/phone.png" alt="" class="hero__phone hero__image" />
+        </div>
+      </div>
+    </section>
+    <section class="info-section">
+      <div class="container">
+        <article class="reminder">
+          <ul class="reminder__notifications">
+            <li class="reminder__notification-example">
+              <img src="images/notification-1.png" alt="" />
               <p class="example-text">
-                Went to Amsterdam with parents to visit her brother.
+                You have a meeting with Surbhi to help her with her portfolio.
+                She got a new pet (Dog named Tiger).
+              </p>
+            </li>
+            <li class="reminder__notification-example">
+              <img src="images/notification-2.png" alt="" />
+              <p class="example-text">
+                Ripal has recently been to Thailand and she wants to discuss
+                about new Job opportunity.
+              </p>
+            </li>
+            <li class="reminder__notification-example">
+              <img src="images/notification-3.png" alt="" />
+              <p class="example-text">
+                Prashasti hasn’t responded to your Email from 22 Jan, 2020.<br />
+                Want to check up on her? <span>Follow up</span>
               </p>
             </li>
           </ul>
-        </div>
-      </article>
-      <div class="vector" id="atom-image">
-        <img src="images/atom-image.svg" alt="" />
-      </div>
-      <article class="convenience">
-        <div class="convenience__example">
-          <div class="convenience__message">
-            <div>
-              <h3 class="convenience__message-title">
-                Send content around anxiety
-              </h3>
-              <p class="example-text">3 people on the list</p>
-            </div>
-            <img
-              src="./images/settings-dots.svg"
-              alt=""
-              class="convenience__message-settings"
-            />
+          <div class="about-reminder">
+            <h2 class="reminder__title">Get reminders to follow up</h2>
+            <p class="paragraph">
+              We remind you of everything important and track everything that’s
+              important to your important ones so you always stay connected. We
+              only tell you the details when you need them the most.
+            </p>
+            <ul class="check-marks">
+              <li class="check-mark">
+                <img src="images/check-mark.svg" alt="" />
+                <p class="example-text">Birthdays</p>
+              </li>
+              <li class="check-mark">
+                <img src="images/check-mark.svg" alt="" />
+                <p class="example-text">Friends & Family</p>
+              </li>
+              <li class="check-mark">
+                <img src="images/check-mark.svg" alt="" />
+                <p class="example-text">Business Meetings</p>
+              </li>
+              <li class="check-mark">
+                <img src="images/check-mark.svg" alt="" />
+                <p class="example-text">Surroundings</p>
+              </li>
+            </ul>
           </div>
-          <p class="convenience__message-text">
-            We all worry and get upset from time to time. It’s a normal part of
-            life, right? But what happens when that anxiety or anger takes over,
-            and you can’t calm down? Being able to calm yourself in the mome...
-          </p>
+        </article>
+      </div>
+      <div class="container">
+        <div class="vector" id="arrows-image">
+          <img src="images/arrows.svg" alt="" />
         </div>
-        <div class="convenience__about-info">
-          <h2 class="convenience__title">Stay connected in a few clicks</h2>
-          <p class="paragraph">
-            The multichannel sales engagement platform which automates personal
-            email outreach, calls, and tasks, while Sales can focus on what
-            really matters - closing
-          </p>
+        <article class="sync">
+          <div class="about-sync">
+            <h2 class="sync__title">Our sync remembers everything</h2>
+            <p class="paragraph">
+              We build a huge databasse of all your contacts with all the
+              possible details they share with you and you can access it
+              anywhere, anytime. It’s works so well that you will love it like
+              we do.
+            </p>
+            <ul class="check-marks">
+              <li class="check-mark">
+                <img src="./images/check-mark.svg" alt="" />
+                <p class="example-text">Available on devices</p>
+              </li>
+              <li class="check-mark">
+                <img src="./images/check-mark.svg" alt="" />
+                <p class="example-text">Seatch details</p>
+              </li>
+              <li class="check-mark">
+                <img src="./images/check-mark.svg" alt="" />
+                <p class="example-text">Can be accesed via phonebook</p>
+              </li>
+              <li class="check-mark">
+                <img src="./images/check-mark.svg" alt="" />
+                <p class="example-text">24X7 Support</p>
+              </li>
+            </ul>
+          </div>
+          <div class="sync__data-example">
+            <div class="sync__example-image">
+              <img src="./images/sync__example-img.svg" alt="" />
+              <div class="sync__general-info">
+                <h3 class="sync__example-name">Archana Deshmukh</h3>
+                <p class="example-text">Product Design Consultant</p>
+              </div>
+            </div>
+            <ul class="sync__data-list">
+              <li>
+                <img src="images/birthday.svg" alt="birthday" />
+                <p class="example-text">17 April, 1994</p>
+              </li>
+              <li>
+                <img src="images/work.svg" alt="work" />
+                <p class="example-text">Product Design Consultant</p>
+              </li>
+              <li>
+                <img src="images/activity.svg" alt="activity" />
+                <p class="example-text">
+                  Went to Amsterdam with parents to visit her brother.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </article>
+      </div>
+      <div class="container">
+        <div class="vector" id="atom-image">
+          <img src="images/atom-image.svg" alt="" />
         </div>
-      </article>
+        <article class="convenience">
+          <div class="convenience__example">
+            <div class="convenience__message">
+              <div>
+                <h3 class="convenience__message-title">
+                  Send content around anxiety
+                </h3>
+                <p class="example-text">3 people on the list</p>
+              </div>
+              <img
+                src="./images/settings-dots.svg"
+                alt=""
+                class="convenience__message-settings"
+              />
+            </div>
+            <p class="convenience__message-text">
+              We all worry and get upset from time to time. It’s a normal part
+              of life, right? But what happens when that anxiety or anger takes
+              over, and you can’t calm down? Being able to calm yourself in the
+              mome...
+            </p>
+          </div>
+          <div class="convenience__about-info">
+            <h2 class="convenience__title">Stay connected in a few clicks</h2>
+            <p class="paragraph">
+              The multichannel sales engagement platform which automates
+              personal email outreach, calls, and tasks, while Sales can focus
+              on what really matters - closing
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+    <div class="container">
+      <section class="bottom-baner">
+        <div class="bottom-baner__text">
+          <h2 class="bottom-baner__title">
+            Form better relationships with everyone
+          </h2>
+          <p class="example-text">Start your free 14 days trial.</p>
+        </div>
+        <button class="bottom-baner__button">Try it for free</button>
+      </section>
     </div>
-  </section>
-  <section class="bottom-baner">
-    <div class="bottom-baner__text">
-      <h2 class="bottom-baner__title">
-        Form better relationships with everyone
-      </h2>
-      <p class="example-text">Start your free 14 days trial.</p>
+    <div class="container">
+      <footer>
+        <h3 class="footer__product-name">Relationz</h3>
+        <p class="footer__copyright">
+          Copyright © 2010 - 2019 Relationz Ltd. All rights reserved.
+        </p>
+      </footer>
     </div>
-    <button class="bottom-baner__button">Try it for free</button>
-  </section>
-  <footer>
-    <h3 class="footer__product-name">Relationz</h3>
-    <p class="footer__copyright">
-      Copyright © 2010 - 2019 Relationz Ltd. All rights reserved.
-    </p>
-  </footer>
+  </body>
 </html>
