--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <section class="hero">
       <div class="container">
         <header class="header">
+          <div class="header__menu" onclick="toggleMenu()">
+            <img src="images/menu-icon.svg" alt="Menu icon" />
+          </div>
           <div class="header__title">Relationz</div>
           <div class="header__login"><a href="">Login</a></div>
-          <nav class="header__nav">
+          <nav id="nav-links" class="header__nav">
             <ul>
               <li class="header__nav-item"><a href="">Services</a></li>
               <li class="header__nav-item"><a href="">Enterprise</a></li>
@@ -212,5 +215,6 @@
         </p>
       </footer>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
